# jsenv

./: .gitignore  Cargo.toml  README.md  index.js  package.json
commands/: alias.js  install.js  list.js  list_available.js  run.js  use.js
lib/: alias.js  get-installed.js  get.js  install.js  list.js  list_available.js  resolve-range.js  resolve.js  run.js  set.js  use.js
src/: commands.rs  config.rs  downloader.rs  main.rs  manager.rs
test/: bin.js
