[package]

name = "jsenv"
version = "0.0.1"
authors = ["Stephen Belanger <admin@stephenbelanger.com>"]

[dependencies.downtar]
path = "../downtar"

[dependencies.semverio]
path = "../semverio"

[dependencies.commander]
path = "../commander"

[dependencies]
rustc-serialize = "^0.2.7"
regex_macros = "0.1.5"
semver = "0.1.12"

# Uncomment after deps are published
# commander = "0.0.1"
# semverio = "0.0.1"
# downtar = "0.0.1"
