[package]
name = "jsenv"
version = "0.0.1"
authors = ["Stephen Belanger <admin@stephenbelanger.com>"]

# [dependencies.downtar]
# path = "../rust-downtar"
#
# [dependencies.semverio]
# path = "../rust-semverio"

[dependencies]
clap = {version = "~2.19.0", features = ["yaml"]}
serde = "*"
serde_derive = "*"
serde_json = "*"
# regex_macros = "0.1.5"
# semver = "0.1.12"

# Uncomment after deps are published
# commander = "0.0.1"
# semverio = "0.0.1"
# downtar = "0.0.1"
